--- a/Regression and Multivariate Data Analysis/README
+++ b/Regression and Multivariate Data Analysis/README
@@ -1,1 +1,13 @@
+This is a compilation of my coursework from the class Regression and Multivariate Data Analysis
+
+I. Real GDP Percent Change and Covid Case per Capita
+  This project 
+
+II. The Real GDP Percent Change over Covid-19
+
+III. Unemployment Rate Regression Model
+
+IV. The Total Death per Capital over Covid-19 Regression Model
+
+V. The Covid-19 Lockdown Logistic Regression Model
 
