--- a/Java Projects/CSCI-UA 102: Data Structures/Project 2: Trees on NYC Streets/README
+++ b/Java Projects/CSCI-UA 102: Data Structures/Project 2: Trees on NYC Streets/README
@@ -1,4 +1,4 @@
-# CS 102, Project 2
+## CS 102, Project 2
 Your need to provide an implementation of several classes that store the data and compute the results when the program is executed.
 
 In particular, your program must implement and use the following classes. You may implement additional classes and additional methods in the required classes, if you wish.
